# kaleido

./: .gitignore  CMakeLists.txt  README.md  main.cpp
generator/: Generator.cpp  Generator.h  LLVMGenerator.cpp  LLVMGenerator.h
lexer/: CharwiseLexer.cpp  CharwiseLexer.h  Lexer.cpp  Lexer.h  RegexLexer.cpp  RegexLexer.h  Token.cpp  Token.h
parser/: Multiplication.h  Negation.h  Parser.cpp  Parser.h  RecursiveDescentParser.cpp  RecursiveDescentParser.h  Subtraction.cpp  Subtraction.h  TreeNode.h  UnaryExpression.h
parser/ast/: Addition.cpp  Addition.h  BinaryExpression.cpp  BinaryExpression.h  Division.cpp  Division.h  Function.cpp  Function.h  Invocation.cpp  Invocation.h  Literal.cpp  Literal.h  Multiplication.cpp  Multiplication.h  Negation.cpp  Prototype.cpp  Prototype.h  Subtraction.cpp  Subtraction.h  TreeNode.cpp  TreeNode.h  UnaryExpression.cpp  Variable.cpp  Variable.h
tests/: LLVMGeneratorTest.cpp  LexerTest.cpp  RecursiveDescentParserTest.cpp
utils/: PointerUtils.cpp  PointerUtils.h
